--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,13 @@
 h1 {
-  color: blue;
+  color: red;
   text-align: center;
 }
 
 h2 {
+  font-weight: bold;
   font-style: italic;
   text-align: center;
+  color: blue;
 }
 
 p {
